story #15455: clean code